# METIS

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json
configs/: env.lock.yml  env.yml  params.yml  paths.yml
configs/ablation_baselines/: ti_baseline_diffmap_global_n60000.yml  ti_baseline_diffmap_local_n5000.yml  ti_baseline_diffmap_meso_n15000.yml  ti_baseline_diffmap_super_global_n130800.yml  ti_baseline_pca_global_n60000.yml  ti_baseline_pca_local_n5000.yml  ti_baseline_pca_meso_n15000.yml  ti_baseline_pca_super_global_n130800.yml  ti_baseline_scvi_global_n60000.yml  ti_baseline_scvi_local_n5000.yml  ti_baseline_scvi_meso_n15000.yml  ti_baseline_scvi_super_global_n130800.yml
configs/ablation_runs/: ablation_riem_tangent_4.yml  ablation_scm_1.yml  ablation_scm_2.yml  ablation_scm_3.yml  embedding_eggfm_diffmap_global_n120000.yml  embedding_eggfm_diffmap_global_n130800.yml  embedding_eggfm_diffmap_meso_n20000.yml  (+54 more)
data/: RAW_SOURCES.md
experiments/: ablation_engine.ipynb  check_variance.ipynb  check_variance.py  clust_analysis.py  dcol_pca.py  fine_tune_eggfm.py  test.ipynb  test_paul15_eggfm.ipynb
infra/: gpu-config.json
scripts/: augment_ti_with_wot.py  bleeding_edge.py  boss_run.py  diffusion_embed.py  embedding.py  inspect_h5ad.py  make_h5ad.py  manifest_utils.py  plot_ti_results.py  qc.py  run_ablation.py  run_baseline_manifolds.py  run_wot_benchmark.py  summarize_ti_metrics.py  ti_eval.py  ti_eval_extended.py  train_energy.py
tools/: bootstrap_vm.sh  cleanup.sh  create_gpu_vm.sh  download_data.sh  get_gcs.sh  init_gcs.sh  makepdf.sh
(+96 files in other folders)
